# exercicios-monitoria-tec-prog

./: .gitignore  Enunciados.md  README.md  cola-sfml.md  dicas-github.txt  download_and_install_sfml.sh  instalar-meson.md  tutorial-meson.txt  usar-meson.md
assets/: derp.json  tilemap.json  tilemap.tmx  tileset.tsx
aula-1/: Personagem.cpp  Personagem.hpp  Principal.cpp  Principal.hpp  enunciado.txt  ex.mdj  main.cpp  meson.build  tutorial-meson.txt
ex-1/: Personagem.cpp  Personagem.hpp  Principal.cpp  Principal.hpp  ex.mdj
ex-2/: ListaPersonagens.cpp  ListaPersonagens.hpp  Personagem.cpp  Personagem.hpp  Principal.cpp  Principal.hpp  enunciado.txt  ex.mdj  meson.build
ex-3/: GerenciadorGrafico.cpp  GerenciadorGrafico.hpp  ListaPersonagens.cpp  ListaPersonagens.hpp  Personagem.cpp  Personagem.hpp  Principal.cpp  Principal.hpp  Vetor2D.hpp  Vetor2DImplementacao.hpp  enunciado.txt  ex.mdj  main.cpp  meson.build
ex-4/: Desenhavel.cpp  Desenhavel.hpp  GerenciadorGrafico.cpp  (+13 more)
ex-8/: Botao.cpp  Botao.hpp  CampoTexto.cpp  CampoTexto.hpp  Cor.cpp  Desenhavel.hpp  FaseExemplo.cpp  GerenciadorBotoes.cpp  GerenciadorBotoes.hpp  GerenciadorColisoes.cpp  GerenciadorColisoes.hpp  GerenciadorEstados.cpp  GerenciadorEventos.cpp  GerenciadorEventos.hpp  GerenciadorGrafico.cpp  GerenciadorGrafico.hpp  GerenciadorTelas.cpp  GerenciadorTelas.hpp  Heroi.cpp  Heroi.hpp  Ids.hpp  Lista.hpp  ListaDesenhaveis.hpp  ListaImplementacao.hpp  Menu.cpp  Menu.hpp  MenuPrincipal.cpp  MenuPrincipal.hpp  PromessaTexto.cpp  Tile.hpp  TileMap.cpp  Vetor2DImplementacao.hpp  ex.mdj  meson.build
(+110 files in other folders)
