project('exercicio 1', 'cpp')

src = ['main.cpp', 'Desenhavel.cpp', 'Principal.cpp', 'ListaDesenhaveis.cpp', 'GerenciadorGrafico.cpp', 'GerenciadorEventos.cpp', 'Vilao.cpp',
 'Heroi.cpp', 'Colidivel.cpp', 'GerenciadorColisoes.cpp', 'GerenciadorTiles.cpp', 'Tile.cpp', 'TileMap.cpp', 'Estado.cpp', 'GerenciadorTelas.cpp',
 'FaseExemplo.cpp', 'GerenciadorEstados.cpp', 'Botao.cpp', 'GerenciadorBotoes.cpp', 'Menu.cpp', 'MenuPrincipal.cpp', 'Cor.cpp',
 'CampoTexto.cpp', 'PromessaTexto.cpp']

deps = [dependency('sfml-all')]

executable('ex', sources: src, dependencies: deps)